--- a/packages/create-taueCli/package.json
+++ b/packages/create-taueCli/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@types/node": "^20.14.6",
     "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "inquirer": "^9.2.23",
+    "shelljs": "^0.8.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "zx": "^8.1.3"
