--- a/packages/create-taueCli/package.json
+++ b/packages/create-taueCli/package.json
@@ -21,6 +21,7 @@
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
+    "yargs": "^17.7.2",
     "zx": "^8.1.3"
   }
 }
