--- a/packages/create-taueCli/package.json
+++ b/packages/create-taueCli/package.json
@@ -18,11 +18,16 @@
     "@types/node": "^20.14.6",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
+    "cross-spawn": "^7.0.3",
     "inquirer": "^9.2.23",
+    "minimist": "1.2.8",
     "shelljs": "^0.8.5",
     "tsx": "^4.16.0",
     "typescript": "^5.4.5",
     "yargs": "^17.7.2",
     "zx": "^8.1.3"
+  },
+  "devDependencies": {
+    "@types/minimist": "^1.2.5"
   }
 }
